Added og image meta tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,18 @@
       name="description"
       content="Web app for user specific Spotify profile data built with React, Node, Express, and Spotify API"
     />
+
+    <meta name="image" content="%PUBLIC_URL%/og.png" />
+    <meta property="og:title" content="Spot Profile" />
+    <meta property="og:description" content="Web app for visualizing personalized Spotify data" />
+    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og.png" />
+    <meta name="twitter:creator" content="@bchiang7" />
+    <meta name="twitter:title" content="Spot Profile" />
+    <meta name="twitter:description" content="Web app for visualizing personalized Spotify data" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/favicon-16x16.png">
